# evaluate-seg-mask

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
evaluate_seg_mask/: __init__.py  cli.py  evaluator.py
evaluatesegmask/: __init__.py  cli.py  evaluator.py
scripts/: convert_rg.py
